--- a/index.html
+++ b/index.html
@@ -499,7 +499,8 @@ body.darktheme ::-webkit-scrollbar-thumb:hover {background-color: #aaaaaa;}
 <body>
 
 <canvas id="myCanvas">Your browser does not support the HTML5 canvas tag.</canvas>
-
+<script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script>
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
