--- a/index.html
+++ b/index.html
@@ -499,8 +499,7 @@ body.darktheme ::-webkit-scrollbar-thumb:hover {background-color: #aaaaaa;}
 <body>
 
 <canvas id="myCanvas">Your browser does not support the HTML5 canvas tag.</canvas>
-<script
-  src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+
 <script>
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
@@ -549,6 +548,8 @@ Explorer 8 and earlier versions.</p>
 
   </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script>
 submitTryit()
 
