--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   ga('send', 'pageview');
 </script>
 
-<script src="videoloader.js" async></script>
+<!-- <script src="videoloader.js" async></script> -->
 
 <script type='text/javascript'>
 var k42 = false;
